# rmpd

./: .gitignore  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.svelte  app.postcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  mpd.rs
src-tauri/src/ipc/: mod.rs  mpd.rs  sync.rs
src-tauri/src/reflection/: mod.rs  request.rs  response.rs  tag.rs
src/lib/: Cover.svelte  CurrentSongUpdate.ts  GlobalStates.ts  MainTab.svelte  Navigation.svelte  PlayerControl.svelte  Queue.svelte  StatusUpdate.ts  Tabs.svelte  TestPage.svelte  TinyInfo.svelte  Types.ts  Utils.ts  bindings.ts
